DMI Stub Performance Bug Fix
- Potential logging of possibly extremely large request data replaced with logging of metadata
- Set (patch)version to 1.8.1-SNAPSHOT
- Pull CPS-NCMP OpenAPi file from GitHub instead of using ONAP Gerrit GitWeb plugin (which has been disabled from today)

Issue-ID: CPS-3190
Change-Id: Ibf843193eb5de2d735c7d6cb5ab2b6b61f3fcab7
Signed-off-by: ToineSiebelink <toine.siebelink@est.tech>